prepare for new lecture

--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@ div.tocify {
 <div id="i-have-a-webpage" class="section level3">
 <h3>I have a webpage!</h3>
 <p>And I can put all kinds of stuff on it!</p>
+<p>You can click <a href="about.html">here</a></p>
 </div>
 <div id="add-some-links" class="section level2">
 <h2>add some links</h2>
