plotly change email

--- a/about.html
+++ b/about.html
@@ -280,7 +280,10 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="plotly-and-flexdashboard.html">Plotly</a>
+</li>
+<li>
+  <a href="mailto:&lt;xl2934@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
