--- a/index.html
+++ b/index.html
@@ -350,7 +350,10 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="plotly-and-flexdashboard.html">Plotly</a>
+</li>
+<li>
+  <a href="mailto:&lt;xl2934@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -378,7 +381,7 @@ div.tocify {
 <div id="i-have-a-webpage" class="section level3">
 <h3>I have a webpage!</h3>
 <p>And I can put all kinds of stuff on it!</p>
-<p>You can click <a href="about.html">here</a></p>
+<p>You can click <a href="about.html">here</a> to know more about me</p>
 </div>
 <div id="add-some-links" class="section level2">
 <h2>add some links</h2>
@@ -386,7 +389,7 @@ div.tocify {
 </div>
 <div id="add-some-picture" class="section level2">
 <h2>add some picture</h2>
-<p><img src="photo1.jpg" /></p>
+<p><img src="images/photo1.jpg" /></p>
 </div>
 
 
