--- a/about.html
+++ b/about.html
@@ -279,8 +279,20 @@ $(document).ready(function () {
         <li>
   <a href="about.html">About</a>
 </li>
-<li>
-  <a href="plotly-and-flexdashboard.html">Plotly</a>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Examples
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="plotly-and-flexdashboard.html">Plotly</a>
+    </li>
+    <li>
+      <a href="dashboard.html">dashboard</a>
+    </li>
+  </ul>
 </li>
 <li>
   <a href="mailto:&lt;xl2934@cumc.columbia.edu&gt;">
